fixed skills overflowing container

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -300,6 +300,7 @@ color:white;
     align-content: center;
     align-items: center;
     flex-direction: row;
+    flex-wrap: wrap;
   }
 
  
